manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskr
  labels:
    app: flaskr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskr
  template:
    metadata:
      labels:
        app: flaskr
    spec:
      containers:
      - name: flaskr
        image: deepvoid/flaskr
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: db-volume
          mountPath: /app/instance
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 5
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: db-volume
          emptyDir: {}
